# ds-vector-search

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: bootstrap.py  constants.py  ingest.py  notebook.ipynb  utils.py
