[project]
name = "ds-vector-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb-client>=0.6.3",
    "ipython>=8.32.0",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.5",
    "networkx>=3.4.2",
    "ollama>=0.4.7",
    "tqdm>=4.67.1",
]
